src/objects/SchedulerAuditTrail__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <description>ID for activity object (can&apos;t have master-detail relationship due the sf limitation on the activity object)</description>
        <label>ActivityId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SchedulerAuditTrails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createDate__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>updateType__c</fullName>
        <label>Update Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SchedulerAuditTrail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>SchedulerAuditTrail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SchedulerAuditTrails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>